# fontfyi

./: README.md  SKILL.md  demo.tape  pyproject.toml
skills/font-tools/: SKILL.md
src/fontfyi/: __init__.py  api.py  cli.py  data.py  mcp_server.py  pairings.py  stacks.py  utils.py
src/fontfyi/_data/: fonts.json
tests/: test_api.py  test_cli.py  test_fontfyi.py  test_mcp.py
